force-app/main/default/objects/Battery_State__c/Battery_State__c.object-meta.xml
<CustomObject>
    <label>Battery State</label>
    <nameField>
        <label>Battery State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battery State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>