force-app/main/default/objects/Battery_State__c/fields/Battery_State_key__c.field-meta.xml
<CustomField>
    <fullName>Battery_State_key__c</fullName>
    <label>Battery State Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>