force-app/main/default/objects/Battery_State__c/fields/Discharge_MW__c.field-meta.xml
<CustomField>
    <fullName>Discharge_MW__c</fullName>
    <label>Discharge MW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>