force-app/main/default/objects/Battery_State__c/fields/Energy_Asset__c.field-meta.xml
<CustomField>
    <fullName>Energy_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Energy Asset</label>
    <referenceTo>RenewAI_Energy_Asset__c</referenceTo>
    <relationshipLabel>Battery State</relationshipLabel>
    <relationshipName>Battery_State</relationshipName>
    <type>Lookup</type>
</CustomField>