force-app/main/default/objects/Battery_State__c/fields/State_Of_Charge__c.field-meta.xml
<CustomField>
    <fullName>State_Of_Charge__c</fullName>
    <label>State Of Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>