force-app/main/default/objects/Battery_State__c/validationRules/SOC_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>SOC_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
State_Of_Charge__c &lt; 0,
State_Of_Charge__c &gt; 100
)</errorConditionFormula>
    <errorMessage>SOC must be between 0 and 100.</errorMessage>
</ValidationRule>